# AMR_2023-2024

./: PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: 이슈-템플릿.md
Arduino_motor/: AAAA_final.ino
Jetson_Inference/: amr_camera.launch  node_detectnet.cpp
Motor_Control/f4_AMR/: .cproject  f4_AMR Debug.launch  f4_AMR.ioc
Motor_DEBUG/: send_stm32.py
PID_Control/.metadata/: .log4j2.xml  version.ini
PID_Control/f4_AMR/: .project
PID_Control/f4_AMR_Motor/: f4_AMR.launch
Ros_Drive/amr_ahrs/: CMakeLists.txt  package.xml
Ros_Drive/amr_ahrs/launch/: mw_ahrs.launch
Ros_Drive/amr_ahrs/src/: mw_ahrs_driver.cpp
Ros_Drive/amr_braccio_ik/: CMakeLists.txt  package.xml
Ros_Drive/amr_braccio_moveit/: .setup_assistant  CMakeLists.txt  package.xml
Ros_Drive/amr_bringup/: package.xml
Ros_Drive/amr_gazebo/: CMakeLists.txt  package.xml
Ros_Drive/amr_navigation/: CMakeLists.txt  package.xml
Ros_Drive/amr_rplidar/: CMakeLists.txt  package.xml
Ros_Drive/amr_slam/: CMakeLists.txt  package.xml
Ros_Drive/amr_stm32/: CMakeLists.txt  package.xml
Ros_Drive/amr_urdf/: CMakeLists.txt  package.xml
Ros_Drive/amr_web/: CMakeLists.txt  package.xml
STL/ROS_URDF/: wheel.f3z  기준점.f3d  뎁스 기준점.f3d
STL/모델/: BG42-4266.f3d  jetson orin 모델.f3d  뎁스 사이즈.f3d  라이다 사이즈 v2.f3d  로봇팔 베이스.f3d  배터리.f3d  휠.f3d
STL/브라켓 테스트/: BG브라켓-B.f3d  BG브라켓-L.f3d  BG브라켓-R.f3d  IMU 브라켓.f3d  Kinect v1 브라켓 테스트.f3d  라이다 브라켓.f3d  모터드라이버 브라켓.f3d  모터브라켓-B.f3d  모터브라켓-L.f3d  모터브라켓-R.f3d  배터리 박스 브라켓.f3d  배터리 박스 테스트.f3d  보드 브라켓.f3d  오린 브라켓.f3d  전방 덮개 브라켓.f3d  (+5 more)
f4_AMR_Motor/: .cproject  .project
(+134 files in other folders)
